--- a/SoteriaAppSln/SoteriaApp/SoteriaApp/Views/AccountPage.xaml
+++ b/SoteriaAppSln/SoteriaApp/SoteriaApp/Views/AccountPage.xaml
@@ -3,6 +3,6 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:prism="http://prismlibrary.com"
              prism:ViewModelLocator.AutowireViewModel="True"
-             x:Class="SoteriaApp.Views.AccountPage" Title="{Binding Title}">
+             x:Class="SoteriaApp.Views.AccountPage" Title="{Binding Title}" IconImageSource="ProfileIcon">
   
 </ContentPage>
