--- a/SoteriaAppSln/SoteriaApp/SoteriaApp/Views/CommunityChat.xaml
+++ b/SoteriaAppSln/SoteriaApp/SoteriaApp/Views/CommunityChat.xaml
@@ -3,6 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:prism="http://prismlibrary.com"
              prism:ViewModelLocator.AutowireViewModel="True"
-             x:Class="SoteriaApp.Views.CommunityChat" Title="{Binding Title}">
+             x:Class="SoteriaApp.Views.CommunityChat" Title="{Binding Title}" IconImageSource="ChatIcon">
+    
+    
   
 </ContentPage>
