--- a/SoteriaAppSln/SoteriaApp/SoteriaApp/Views/LandingTabbedPage.xaml
+++ b/SoteriaAppSln/SoteriaApp/SoteriaApp/Views/LandingTabbedPage.xaml
@@ -3,7 +3,7 @@
             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
             xmlns:prism="http://prismlibrary.com" xmlns:views="clr-namespace:SoteriaApp.Views"
             prism:ViewModelLocator.AutowireViewModel="True"
-            x:Class="SoteriaApp.Views.LandingTabbedPage" Title="Prism Tabs"
+            x:Class="SoteriaApp.Views.LandingTabbedPage"
             xmlns:android="clr-namespace:Xamarin.Forms.PlatformConfiguration.AndroidSpecific;assembly=Xamarin.Forms.Core"
     android:TabbedPage.ToolbarPlacement="Bottom">
  
