Sized the text on insights page and added a font family

--- a/SoteriaAppSln/SoteriaApp/SoteriaApp/Views/InsightsPage.xaml
+++ b/SoteriaAppSln/SoteriaApp/SoteriaApp/Views/InsightsPage.xaml
@@ -5,8 +5,10 @@
              prism:ViewModelLocator.AutowireViewModel="True"
              x:Class="SoteriaApp.Views.InsightsPage" Title="{Binding Title}" IconImageSource="InsightsIcon">
 
-    <StackLayout>
-        <Grid>
+
+    <Grid>
+        
+        <Grid  VerticalOptions="Center">
 
             <Grid.RowDefinitions>
                 <RowDefinition Height="200," />
@@ -19,17 +21,19 @@
                 
             </Grid.ColumnDefinitions>
 
-            <BoxView Color="#A9DFE2" CornerRadius="10" Margin="10,15,0,5"   />
+            <BoxView Color="#A9DFE2" CornerRadius="20" Margin="10,15,0,5"  />
             <Label Text="What is 
-                          it?"
+                           it?"
                HorizontalOptions="Center"
                VerticalOptions="Center" 
                    HorizontalTextAlignment="Center"
                    VerticalTextAlignment="Center"
                    TextColor="White"
-                   FontSize="Title"/>
+                   FontSize="Title"
+                   Padding="10,25,5,10"/>
+            
             <BoxView Grid.Column="1"
-                 Color="#5C6898" CornerRadius="10" Margin="5,15,10,5"   />
+                 Color="#5C6898" CornerRadius="20" Margin="5,15,10,5"   />
             <Label Grid.Column="1"
                Text="Various 
                       Types"
@@ -38,19 +42,23 @@
                    HorizontalTextAlignment="Center"
                    VerticalTextAlignment="Center"
                    TextColor="White"
-                   FontSize="Title" />
+                   FontSize="Title"
+                   Padding="0,20,9,10"/>
+            
             <BoxView Grid.Row="1"
-                 Color="#5C6898" CornerRadius="10"  Margin="10,5,0,15"    />
+                 Color="#5C6898" CornerRadius="20"  Margin="10,5,0,15"    />
             <Label Grid.Row="1"
                Text="Signs and Symptoms"
                HorizontalOptions="Center"
                VerticalOptions="Center"
                    HorizontalTextAlignment="Center"
                    TextColor="White"
-                   FontSize="Title"/>
+                   FontSize="Title"
+                   Padding="0,0,-5,10"/>
+            
             <BoxView Grid.Row="1"
                  Grid.Column="1"
-                 Color="#A9DFE2" CornerRadius="10"  Margin="5,5,10,15" />
+                 Color="#A9DFE2" CornerRadius="20"  Margin="5,5,10,15" />
             <Label Grid.Row="1"
                Grid.Column="1"
                Text="Influences"
@@ -59,11 +67,12 @@
                    HorizontalTextAlignment="Center"
                    VerticalTextAlignment="Center"
                    TextColor="White"
-                   FontSize="Title"/>
+                   FontSize="Title"
+                   Padding="0,0,0,10"/>
             
             <BoxView Grid.Row="2"
                  Grid.ColumnSpan="2"
-                 Color="#A9DFE2" CornerRadius="10" Margin="9,0,9,0" />
+                 Color="#A9DFE2" CornerRadius="20" Margin="9,-5,9,10"  />
             <Label Grid.Row="2"
                Grid.ColumnSpan="2"
                Text="Solutions"
@@ -72,9 +81,10 @@
                    HorizontalTextAlignment="Center"
                    VerticalTextAlignment="Center"
                    TextColor="White"
-                   FontSize="Title"/>
+                   FontSize="Title"
+                   Padding="0,0,2,15"/>
            
         </Grid>
-    </StackLayout>
+    </Grid>
   
 </ContentPage>
