Added "Typo_Round_Regular_Demo.otf" font

--- a/SoteriaAppSln/SoteriaApp/SoteriaApp/Views/InsightsPage.xaml
+++ b/SoteriaAppSln/SoteriaApp/SoteriaApp/Views/InsightsPage.xaml
@@ -28,7 +28,7 @@
                VerticalOptions="Center" 
                    HorizontalTextAlignment="Center"
                    VerticalTextAlignment="Center"
-                   FontFamily="Nexa Bold.otf"
+                   FontFamily="Typo_Round_Regular_Demo.otf"
                    TextColor="White"
                    FontSize="Title"
                    Padding="10,25,5,10"/>
@@ -42,7 +42,7 @@
                VerticalOptions="Center"
                    HorizontalTextAlignment="Center"
                    VerticalTextAlignment="Center"
-                   FontFamily="NexaBold"
+                   FontFamily="Typo_Round_Regular_Demo.otf"
                    TextColor="White"
                    FontSize="Title"
                    Padding="0,20,9,10"/>
@@ -54,7 +54,7 @@
                HorizontalOptions="Center"
                VerticalOptions="Center"
                    HorizontalTextAlignment="Center"
-                   FontFamily="NexaBold"
+                   FontFamily="Typo_Round_Regular_Demo.otf"
                    TextColor="White"
                    FontSize="Title"
                    Padding="0,0,-5,10"/>
@@ -67,7 +67,7 @@
                Text="Influences"
                HorizontalOptions="Center"
                VerticalOptions="Center"
-                   FontFamily="NexaBold"
+                   FontFamily="Typo_Round_Regular_Demo.otf"
                    HorizontalTextAlignment="Center"
                    VerticalTextAlignment="Center"
                    TextColor="White"
@@ -82,7 +82,7 @@
                Text="Solutions"
                HorizontalOptions="Center"
                VerticalOptions="Center"
-                   FontFamily="NexaBold"
+                   FontFamily="Typo_Round_Regular_Demo.otf"
                    HorizontalTextAlignment="Center"
                    VerticalTextAlignment="Center"
                    TextColor="White"
