Added changes to loginpage and tutorialpage

--- a/SoteriaAppSln/SoteriaApp/SoteriaApp/Views/LoginPage.xaml
+++ b/SoteriaAppSln/SoteriaApp/SoteriaApp/Views/LoginPage.xaml
@@ -11,7 +11,10 @@
 
         <StackLayout>
 
-            <Image Source="KidReadyLogo.png" />
+
+            <Frame CornerRadius="360">
+            <Image Source="KidReadyLogo.png" HeightRequest="300"/>
+            </Frame>
 
             <Grid 
                 
